[package]
name = "rust-sqlite-experiment"
version = "0.1.0"
authors = ["Brendan Jackman <bhenryj0117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
uom = "0.26.0"
gnuplot = "0.0.32"
# hyper = "0.12"
tiny_http = "0.6.2"
clap = "1.4.1"
rand = "0.7.2"
tempfile = "3.1.0"
